sql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compareapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: souhir
  template:
    metadata:
      labels:
        app: souhir
    spec:
      containers:
        - name: compareapp
          image: souhirks/training3
---
apiVersion: v1
kind: Service
metadata:
  name: souhirsvc
spec:
  type: NodePort
  selector:
    app: souhir
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30100
